# youtube-video-downloader

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_RAILWAY_SETUP.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  RAILWAY.md  README.md  SPEED_OPTIMIZATION.md  TYPE_ERRORS_FIXED.md  docker-compose.dev.yml  docker-compose.yml  railway.json  setup.sh  start.sh
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: errors.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: videos.py
backend/app/core/: config.py  health.py  logging.py  rate_limit.py  version.py
backend/app/models/: video.py
backend/app/services/: download_tasks.py  errors.py  yt_dlp_service.py
backend/app/services/ytdlp/: __init__.py  constants.py  disk_space.py  youtube_opts.py
backend/tests/: conftest.py  test_api.py  test_download_tasks.py  test_services.py  test_ytdlp_options.py
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  tailwind.config.ts
frontend/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/components/: theme-toggle.tsx
frontend/components/ui/: table.tsx
frontend/components/video/: downloader.tsx  formats-table.tsx  url-form.tsx
frontend/lib/: api-client.ts  env.ts  format-catalog.ts  utils.ts
scripts/: railway-bootstrap.sh  railway-common.sh  railway-cookies-chunks.sh  railway-set-env.sh  railway_resolve_service_names.py
